# gsdensity

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: android-build.yml
include/: cli.h  common.h  gdm_decoder.h  gdm_encoder.h  grle_decoder.h  grle_encoder.h  i3d_parser.h  image_utils.h
sources/: Relatório_de_Sugestões_para_o_CLI_GSDENSITY.md  gsdensity.md
sources/grleconvert-master/: .gitignore  Cargo.toml  LICENSE  README.md
sources/grleconvert-master/.github/workflows/: release.yml
sources/grleconvert-master/docs/: GDM_FORMAT.md  GRLE_FORMAT.md
sources/grleconvert-master/src/: main.rs
sources/samples/: cultivator_density.gdm  fruit_density.gdm  mapUSM.i3d  mapUSM.i3d.plcColMap.grle  mapUSM.i3d.tipColMap.grle  mapUSM_farmland.grle  terrainDetailHeight_density.gdm  tipColInfoLayer.grle  weed_density.gdm
src/: cli.cpp  gdm_decoder.cpp  gdm_encoder.cpp  grle_decoder.cpp  grle_encoder.cpp  i3d_parser.cpp  image_utils.cpp  main.cpp
tests/: test_gdm_decode.cpp  test_gdm_encode.cpp  test_grle_decode.cpp  test_grle_encode.cpp  test_roundtrip.cpp
